Helponline: Fix alignment of TOC in sidebar
It was too close to the window border in Edge, Chrome and Firefox Nightly.

--- a/help3xsl/default.css
+++ b/help3xsl/default.css
@@ -794,7 +794,7 @@ li.disabled a {
         color: #333;
         z-index: 6;
         display: block;
-        padding: 0 0 0 20px;
+        margin: 0 20px 0 20px;
     }
     label[for=accordion-1] {
         background-color: transparent;
